# quantified-self-mcp

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  SYSTEM_PROMPT.md  analysis_server.py  mcp_server_standalone.py  pyproject.toml  remote_ngrok.md  sqlite_server.py  test_ai_affordances.py  test_mcp_server.py  workout-dashboard.html
apps/mcp_server/src/: database.py  export_data.py  postgres_provider.py  server.py
apps/mcp_server/src/agent/: end_of_day_workflow.py
apps/mcp_server/src/agent/data_agent/: analysis_runner.py  csv_exporter.py  data_discovery.py  database_helpers.py  debug_tables.py  exa_search.py  html_generator.py  load_data.py  simple_agent.py  simple_debug.py  test.ipynb  test_helpers.py  trace_debug.py
apps/mcp_server/src/tools/: add_column.py  create_table.py  edit_table_schema.py  insert_data.py  list_tables.py  query_data.py  table_metadata.py  view_table.py
demo/: quantified_self_demo.md
demo/seed/: cals.csv  food.csv  seed_database.py  workouts.csv
docs/: README.md  anthropic_tool_use.md  implementation-guide.md  mcp-server-implementation.md  mcp-tool-examples.md  n8n-agent-prompts.md  supabase-setup.md  updated-insert-data-tool.md  user-flow-analysis.md
examples/: README.md  simple_anthropic.py  simple_exa.py  simple_openai.py
scripts/: add_ids_to_workouts.py  check_food_data.py  check_schema.py  seed_demo_data.py
sql/: sample_tables.sql
tests/: test_connection.py  test_database_tools.py  test_research_tools.py  test_visualization_tools.py
